# hmi-ai-python

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  hmi-symbol-mapping.json  pyproject.toml
.github/workflow/: docker-image.yml
.github/workflows/: docker-image.yml
app/: main.py
app/core/: image2hmi.py  ocr.py  settings.py  text2hmi.py
app/core/prompts/: __init__.py  prompts.py
app/datas/: system_figure.py
app/routers/: image2hmi.py  ocr.py  text2hmi.py
app/schemas/: image2hmi.py  system_figure.py  text2hmi.py
docs/: README.md
docs/STANDARD/: README.md
models/: hollysys-hmi-line.pt  hollysys-hmi.pt
models/dcs/: hollysys-hmi-line.pt  hollysys-hmi.pt
